# metal_wyvern

./: .gitignore  Cargo.toml  README.md  newly_trained_model_test.mpk  simple_cnn_opset16.mpk  transformer_v1.mpk  withpool_170k_toponly.mpk
battle_server/: Cargo.toml  simple_cnn.onnx
battle_server/src/: main.rs
battle_server_onnx/: Cargo.toml
battle_server_onnx/src/: main.rs
burn_ai_model/: Cargo.toml
burn_ai_model/src/: cnn_v2.rs  cnn_v3_the_beefening.rs  cnn_v4_beef_to_the_future.rs  lib.rs  simple_cnn_opset16.rs  transformer.rs
data_grabbing/: Cargo.toml
data_grabbing/src/: main.rs
playground/: Cargo.toml  simple_cnn_opset16.onnx
playground/src/: lib.rs  main.rs
src/: main.rs
training/: Cargo.toml
training/src/: _cnn_main.rs  main.rs
