[package]
name = "data_grabbing"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
regex = "1"
futures = "0.3"
# Database: Match Burn's dependency
rusqlite = { version = "0.37", features = ["bundled"] }
